--- a/.travis.yml
+++ b/.travis.yml
@@ -6,19 +6,17 @@ script:
   - workbox generateSW workbox-config.js
 deploy:
   - provider: s3
-    skip_cleanup: true
     access_key_id: $ACCESS_KEY_ID
     secret_access_key: $SECRET_ACCESS_KEY
-    bucket: ivantsyba.com-stg
+    bucket: "ivantsyba.com-dev"
     region: eu-central-1
     acl: public_read
     on:
       branch: develop
   - provider: s3
-    skip_cleanup: true
     access_key_id: $ACCESS_KEY_ID
     secret_access_key: $SECRET_ACCESS_KEY
-    bucket: ivantsyba.com-prod
+    bucket: "ivantsyba.com-production"
     region: eu-central-1
     acl: public_read
     on:
