--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ script:
 deploy:
   - provider: s3
     cleanup: true
-    access_key_id: "AKIAIRRWLUVKGQW7TD3A"
-    secret_access_key: "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"
+    access_key_id: "AKIAJTTVNUYCWK76LUUA"
+    secret_access_key: "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"
     bucket: "ivantsyba.com-dev"
     region: eu-central-1
     acl: public_read
@@ -16,8 +16,8 @@ deploy:
       branch: develop
   - provider: s3
     cleanup: true
-    access_key_id: "AKIAIRRWLUVKGQW7TD3A"
-    secret_access_key: "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"
+    access_key_id: "AKIAJTTVNUYCWK76LUUA"
+    secret_access_key: "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"
     bucket: "ivantsyba.com-production"
     region: eu-central-1
     acl: public_read
